--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
+# DB configuration
 DB_HOST=
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
 DB_PORT=
 SSL_MODE=
+
+# Midtrans API Keys
 SERVER_KEY=
 CLIENT_KEY=
+
+# JWT Secret
 SECRET_KEY=
